# LongYinModInstaller

./: .gitignore  LongYinModInstaller.spec  README.md  build.ps1  catalog_sources.example.json  launcher.py  pyproject.toml
mod_repository/: README.md  mods.json
src/longyin_mod_installer/: constants.py  main.py  models.py
src/longyin_mod_installer/services/: catalog.py  keyvalues.py  melonloader.py  mods.py  settings.py  steam.py
src/longyin_mod_installer/ui/: main_window.py
src/longyin_mod_installer/utils/: runtime.py
tests/: test_catalog.py  test_keyvalues.py  test_melonloader.py  test_mods.py  test_settings.py
